Bug 505929 - Open terminal entry in desktop while right clicking shows konsole icon instead of the default terminal icon that is set for example Ghostty
Summary: Open terminal entry in desktop while right clicking shows konsole icon instea...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.4.0
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-06-21 16:12 UTC by Angad
Modified: 2025-08-23 21:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
desktop right click screenshot (3.25 MB, image/png)
2025-06-21 16:12 UTC, Angad
Details
ghossty is deafult terminal set (29.78 KB, image/png)
2025-06-21 16:14 UTC, Angad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Angad 2025-06-21 16:12:24 UTC
Created attachment 182492 [details]
desktop right click screenshot

STEPS TO REPRODUCE
1. Set any other terminal as default
2. try right-clicking on the desktop 

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.14.11-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 1 Angad 2025-06-21 16:14:03 UTC
Created attachment 182493 [details]
ghossty is deafult terminal set
Comment 2 cwo 2025-06-21 18:21:11 UTC
It's not really the Konsole icon, strictly speaking, it's your icon theme's "utilities-terminal" icon. Konsole uses the same icon though.

In principle this is correct, as the action is not "Open Konsole" or "Open Xterm" or whatever, but a generic "Open Terminal" similar to e.g. in Kate.

We should probably use the symbolic version to make this clearer.
Comment 3 Angad 2025-06-21 22:22:40 UTC
(In reply to cwo from comment #2)
> We should probably use the symbolic version to make this clearer.
Yeah, this would be great
Comment 4 Bug Janitor Service 2025-06-24 16:48:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5625
Comment 5 Nate Graham 2025-08-23 21:38:03 UTC
Git commit 09ac9b494bf329d72df9164653eb28ee24345998 by Nate Graham.
Committed on 22/08/2025 at 04:27.
Pushed by ngraham into branch 'master'.

Use symbolic terminal icon in desktop context menu

The colorful version looks like Konsole, which can confuse people whose
default terminal application isn't Konsole.
FIXED-IN: 6.5.0

M  +1    -1    containmentactions/contextmenu/menu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/09ac9b494bf329d72df9164653eb28ee24345998