Use symbolic terminal icon in desktop context menu

The colorful version looks like Konsole, which can confuse people whose
default terminal application isn't Konsole.


BUG: 505929
FIXED-IN: 6.5.0